mariadb-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
spec:
  type: ClusterIP
  ports:
    - port: 3306
      targetPort: mariadb
  selector:
    app: mariadb
    part-of: powerdns
