powerdns-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: powerdns
  annotations:
    metallb.universe.tf/allow-shared-ip: "powerdns"
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.60
  selector:
    app: powerdns
    part-of: powerdns
  ports:
    - name: powerdns
      port: 5300
      targetPort: powerdns
      protocol: TCP
  allocateLoadBalancerNodePorts: false
---
apiVersion: v1
kind: Service
metadata:
  name: powerdns-udp
  annotations:
    metallb.universe.tf/allow-shared-ip: "powerdns"
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.60
  selector:
    app: powerdns
    part-of: powerdns
  ports:
    - port: 5300
      targetPort: powerdns-udp
      protocol: UDP
  allocateLoadBalancerNodePorts: false
---
apiVersion: v1
kind: Service
metadata:
  name: powerdns-web
spec:
  type: ClusterIP
  ports:
    - port: 8081
      targetPort: powerdns-web
  selector:
    app: powerdns
    part-of: powerdns
